option('notifications', type: 'feature', value: 'auto', description: 'enable desktop notifications')
option('python-plugins', type : 'boolean', value : 'false', description : 'enable Python plugins')
option('c-plugins', type : 'boolean', value : 'false', description : 'enable C plugins')
option('plugins', type : 'boolean', value : 'false', description : 'enable plugins')
option('otr', type : 'boolean', value : 'false', description : 'OTR encryption')
option('pgp', type : 'boolean', value : 'false', description : 'PGP encryption')
option('omemo', type : 'boolean', value : 'false', description : 'OMEMO encryption')
option('xscreensaver', type : 'boolean', value : 'false', description : 'use libXScrnSaver to determine idle time')
option('icons-and-clipboard', type : 'boolean', value : 'false', description : 'enable GTK tray icons and clipboard paste support')
