option('notifications', type: 'feature', value: 'auto', description: 'enable desktop notifications')
option('python-plugins', type : 'feature', value : 'auto', description : 'enable Python plugins')
option('c-plugins', type : 'feature', value : 'auto', description : 'enable C plugins')
option('plugins', type : 'feature', value : 'auto', description : 'enable plugins')
option('otr', type : 'feature', value : 'auto', description : 'OTR encryption')
option('pgp', type : 'feature', value : 'auto', description : 'PGP encryption')
option('omemo', type : 'feature', value : 'auto', description : 'OMEMO encryption')
option('xscreensaver', type : 'feature', value : 'auto', description : 'use libXScrnSaver to determine idle time')
option('icons-and-clipboard', type : 'feature', value : 'auto', description : 'enable GTK tray icons and clipboard paste support')
